--- a/TodoListWithDb/app/src/main/res/layout/item_view_tasks_completed_recycle_view.xml
+++ b/TodoListWithDb/app/src/main/res/layout/item_view_tasks_completed_recycle_view.xml
@@ -50,4 +50,12 @@
         android:layout_marginTop="16dp"
         app:layout_constraintStart_toStartOf="@+id/textDateStart"
         app:layout_constraintTop_toBottomOf="@+id/textDateStart"/>
+    <Button
+        android:id="@+id/btnDeleteTask"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="&#x2716;"
+        android:textSize="16sp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
